# nextsvg

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
nextsvg/: data.py  hello.py  optim.py  train_callbacks.py  trainer.py
notebooks/: text_diffusion.ipynb
scripts/: train_vectorizer.py
