[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nextsvg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "datasets>=4.8.4",
    "hydra-core>=1.3.2",
    "lightning>=2.6.1",
    "lovely-tensors>=0.1.22",
    "matplotlib>=3.10.8",
    "omegaconf>=2.3.0",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "polars>=1.40.0",
    "pyyaml>=6.0.3",
    "safetensors>=0.7.0",
    "svglab>=0.14.0",
    "tensordict>=0.11.0",
    "tokenizers>=0.22.2",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
    "typer>=0.24.1",
    "wandb>=0.26.0",
]

[tool.hatch.build.targets.wheel]
packages = ["nextsvg"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "mypy>=1.20.1",
    "nbformat>=5.10.4",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
    "ty>=0.0.31",
]


[tool.ruff]
line-length = 120
extend-exclude = ["*.ipynb"]
include = [
    "nextsvg/**/*.py",
    "tests/**/*.py",
    "scripts/**/*.py",
]


[tool.pytest]

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = [
    "nextsvg",
    "tests",
]
norecursedirs = [
    "wandb-logs",
    "checkpoints",
    "data",
    ".mypy_cache",
    ".ruff_cache",
    ".pytest_cache"
]
